fix full-width bleed image #3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -573,7 +573,7 @@ POST/ARTICLE HEADERS
 }
 
 .kg-image-card.kg-width-full {
-    width: 164%;
+    width: 100vw;
     left: -33%;
     position: relative;
 }
